@@ -6,6 +6,7 @@ Version 1.0.2 (release ??)
   * make RSS URL method match the method used to generate it (issue #245)
   * fix Subversion annotation to run non-interactively, preventing hangs
   * fix bug in custom syntax highlighter fallback logic
+  * fix bug in PHP CGI hack to avoid force-cgi-redirect errors
 
 Version 1.0.1 (released 20-Jul-2006)
 
